# NeXtQSM

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-publish.yml  tests.yml
checkpoints/: checkpoint  params.json
nextqsm/: __init__.py  predict_all.py
nextqsm/models/: solver_all.py  varnet.py
nextqsm/processing/: data_loader.py
nextqsm/tests/: test_nextqsm.py
nextqsm/tf_utils/: __init__.py
nextqsm/tf_utils/blocks/: cnn_block.py
nextqsm/tf_utils/nets/: unet.py
src_tensorflow/: predict_all.py
src_tensorflow/models/: solver_all.py  varnet.py
src_tensorflow/processing/: data_loader.py  qsm.py
src_tensorflow/tf_utils/: metrics.py  misc.py
src_tensorflow/tf_utils/blocks/: cnn_block.py
src_tensorflow/tf_utils/nets/: unet.py
